--- a/_sass/partials/_footer.scss
+++ b/_sass/partials/_footer.scss
@@ -1,6 +1,6 @@
 
-$one-third-grid-columns: ($grid-columns/3) of $grid-columns;
-$two-thirds-grid-columns: (2*$grid-columns/3) of $grid-columns;
+$one-third-grid-columns: ($grid-columns/3);
+$two-thirds-grid-columns: (2*$grid-columns/3);
 
 footer {
 
