--- a/_sass/partials/_header.scss
+++ b/_sass/partials/_header.scss
@@ -1,5 +1,5 @@
 
-$half-grid-columns: $grid-columns/2 of $grid-columns;
+$half-grid-columns: $grid-columns/2;
 
 header {
 
